--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.4.30",
-    "css-loader": "^7.1.2",
+    "element-plus": "^2.7.6",
+    "file-loader": "^6.2.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
-    "style-loader": "^4.0.0",
     "style-resources-loader": "^1.5.0",
+    "url-loader": "^4.1.1",
     "vue": "^3.4.30",
     "vue-loader": "^17.3.1",
     "vue-router": "^4.4.0",
